# deicibel-counter

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
android-patches/: apply_patches.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
