[package]
name        = "decibel-counter"
version     = "0.1.0"
edition     = "2021"
description = "Transparent gaming overlay that shows live microphone dB level"

# The lib target lets Tauri's mobile scaffolding (and unit tests) compile the
# app logic independently of the binary entry-point.
[lib]
name        = "decibel_counter_lib"
crate-type  = ["staticlib", "cdylib", "rlib"]

# ── Build-time ────────────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Runtime ───────────────────────────────────────────────────────────────────
[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# cpal 0.15 — cross-platform real-time audio I/O
# oboe-shared-stdcxx: links against the shared C++ STL required on Android API 21+.
# On non-Android targets this feature flag is a no-op.
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }

# WASAPI is the default cpal backend on Windows — no feature flag needed.
# CoreAudio is the default on macOS and iOS.
# AAudio/Oboe is the default on Android (API 26+), falling back to OpenSL ES.
